--- a/pricing.html
+++ b/pricing.html
@@ -144,14 +144,18 @@
             <!-- price list 1 -->
             <div class="row gy-5">
               <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
-                <div class="position-relative shadow rounded border-primary" style="border-top:5px solid;">
+                <div class="position-relative shadow rounded border-primary" style="border-top:2px solid;">
                   <div
                     class="d-flex align-items-center justify-content-center position-absolute pricing-icon bg-primary rounded-circle"
                     style="width: 45px; height: 45px; margin-top: -3px;">
-                    <i class="fa fa-share-alt text-white"></i>
+                    <svg xmlns="http://www.w3.org/2000/svg"
+                      viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                      <path
+                        d="M64 32C28.7 32 0 60.7 0 96v64c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64zm280 72a24 24 0 1 1 0 48 24 24 0 1 1 0-48zm48 24a24 24 0 1 1 48 0 24 24 0 1 1 -48 0zM64 288c-35.3 0-64 28.7-64 64v64c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V352c0-35.3-28.7-64-64-64H64zm280 72a24 24 0 1 1 0 48 24 24 0 1 1 0-48zm56 24a24 24 0 1 1 48 0 24 24 0 1 1 -48 0z" />
+                    </svg>
                   </div>
                   <div class="text-center border-bottom p-4 pt-5">
-                    <h4 class="font-weight-bold">Share Hosting</h4>
+                    <h4 class="font-weight-bold">Shared Hosting</h4>
                     <p class="mb-0">Eirmod erat dolor amet est clita lorem erat justo rebum elitr eos</p>
                   </div>
                   <div class="text-center border-bottom p-4">
@@ -174,7 +178,7 @@
                 </div>
               </div>
               <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
-                <div class="position-relative shadow rounded border-secondary" style="border-top:5px solid;">
+                <div class="position-relative shadow rounded border-secondary" style="border-top:2px solid;">
                   <div
                     class="d-flex align-items-center justify-content-center position-absolute pricing-icon bg-secondary rounded-circle"
                     style="width: 45px; height: 45px; margin-top: -3px;">
@@ -204,7 +208,7 @@
                 </div>
               </div>
               <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
-                <div class="position-relative shadow rounded border-primary" style="border-top:5px solid;">
+                <div class="position-relative shadow rounded border-primary" style="border-top:2px solid;">
                   <div
                     class="d-flex align-items-center justify-content-center position-absolute pricing-icon bg-primary rounded-circle"
                     style="width: 45px; height: 45px; margin-top: -3px;">
@@ -239,7 +243,7 @@
             <!-- price list2 -->
             <div class="row gy-5">
               <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
-                <div class="position-relative shadow rounded border-primary" style="border-top:5px solid;">
+                <div class="position-relative shadow rounded border-primary" style="border-top:2px solid;">
                   <div
                     class="d-flex align-items-center justify-content-center position-absolute pricing-icon bg-primary rounded-circle"
                     style="width: 45px; height: 45px; margin-top: -3px;">
@@ -269,7 +273,7 @@
                 </div>
               </div>
               <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
-                <div class="position-relative shadow rounded border-secondary" style="border-top:5px solid;">
+                <div class="position-relative shadow rounded border-secondary" style="border-top:2px solid;">
                   <div
                     class="d-flex align-items-center justify-content-center position-absolute pricing-icon bg-secondary rounded-circle"
                     style="width: 45px; height: 45px; margin-top: -3px;">
@@ -299,7 +303,7 @@
                 </div>
               </div>
               <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
-                <div class="position-relative shadow rounded border-primary" style="border-top:5px solid;">
+                <div class="position-relative shadow rounded border-primary" style="border-top:2px solid;">
                   <div
                     class="d-flex align-items-center justify-content-center position-absolute pricing-icon bg-primary rounded-circle"
                     style="width: 45px; height: 45px; margin-top: -3px;">
